# universion

./: .pre-commit-hooks.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: check-same-version.yml  review-cff-authors-pr.yml
src/universion/: universion.py
src/universion/context/: v1.0.0.jsonld
src/verple/: verple.py
src/verple/context/: v1.0.0.jsonld
tests/: test_universion.py  test_verple.py
