[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universion"
version = "1.0.0"
description = "Strict, conservative universal version comparator, serializer, and protocol."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["versioning", "semantic versioning", "pep440", "PEP 440", "SemVer", "version parser"]
authors = [
  { name = "Will Riley", email = "wanderingwill@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
dependencies = ["packaging>=25.0", "semver>=3.0.4"]

[project.urls]
Homepage = "https://github.com/willynilly/universion"
Documentation = "https://github.com/willynilly/universion#readme"
Issues = "https://github.com/willynilly/universion/issues"
Source = "https://github.com/willynilly/universion"

[project.optional-dependencies]
testing = [
    "pytest>=8.3.5",
]
dev = [
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.hatch.build]
include = ["src/universion/**", "CITATION.cff"]

[tool.hatch.build.targets.wheel]
packages = ["src/universion"]
