[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verple"
version = "1.0.0"
description = "Verple is a ridiculously strict and ultra-conservative universal version format, comparator, serializer, and protocol."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = [ 
  "versioning",  
  "semantic versioning", 
  "pep440", 
  "PEP 440", 
  "SemVer", 
  "CalVer", 
  "version parser", 
  "json-ld", 
  "linked data", 
  "provenance"
]

authors = [
  { name = "Will Riley", email = "wanderingwill@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = ["packaging>=25.0", "semver>=3.0.4"]

[project.urls]
Homepage = "https://github.com/willynilly/verple"
Documentation = "https://github.com/willynilly/verple#readme"
Issues = "https://github.com/willynilly/verple/issues"
Source = "https://github.com/willynilly/verple"

[project.optional-dependencies]
testing = [
    "pytest>=8.3.5",
]
dev = [
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.hatch.build]
include = ["src/verple/**", "CITATION.cff"]

[tool.hatch.build.targets.wheel]
packages = ["src/verple"]
